--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Design Assisstant</title>
     <link rel="stylesheet" type="text/css" href="designassist_style.css">
+    <link rel="icon" type="image/x-icon" href="logo.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +19,11 @@
 
         <div class="buttons">
             <a href="INTERPOLATE/interpol.html" target="_blank">
-                <button id="interpol-button">INTERPOLATE</button>
+                <button id="buttons">INTERPOLATE</button>
+            </a>
+
+            <a href="CALCULATE_LOAD/load_index.html" target="_blank"></a>
+                <button id="buttons">BRACING FORCE</button>
             </a>
         </div>
 
