--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <button id="buttons">INTERPOLATE</button>
             </a>
 
-            <a href="CALCULATE_LOAD/load_index.html" target="_blank"></a>
+            <a href="CALCULATE_LOAD/load_index.html" target="_blank">
                 <button id="buttons">BRACING FORCE</button>
             </a>
         </div>
